ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nft-minter.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nft-minter-clusterip
                port:
                  number: 3000
